--- a/Kayportfolio/index.html
+++ b/Kayportfolio/index.html
@@ -5,34 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>personal portfolio</title>
     <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://kit.fontawesome.com/5614ba0e7a.js"
-      crossorigin="anonymous"
-    ></script>
+    <!-- <script src="https://kit.fontawesome.com/5614ba0e7a.js" crossorigin="anonymous"></script> -->
+     <link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+  rel="stylesheet"
+/>
   </head>
   <body>
     <div id="header">
       <div class="container">
         <nav>
           <a href="#" class="logo"><span>Kaytech </span> </a>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
+         <ul id="nav-links">
+  <li><a href="#header">Home</a></li>
+  <li><a href="#about">About</a></li>
+  <li><a href="#services">Services</a></li>
+  <li><a href="#portfolio">Portfolio</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i></li> 
+</ul>
           </ul>
+          <i class="fa-solid fa-bars" id="menu" onclick="openmenu()"></i>
         </nav>
         <div class="header-content">
-          <div class="header-text">
-            <p>UXI/UX Designer</p>
+          <div class="header-text"> 
             <h1>
-              Hi, i'm <span>Kaytech</span><br />
+              Hi, I'm <span>Kaytech</span><br />
               From Nigeria
             </h1>
+                     <p>
+  I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Creator"></span>
+</p>
           </div>
-          <img src="images/background.jpg" alt="" />
-        </div>
+          <img src="images/logo4.jpg" alt="" />
       </div>
     </div>
     <div id="about">
@@ -59,6 +64,7 @@
               </p>
               <p class="tab-links" onclick="opentab('education')">Education</p>
             </div>
+
             <div class="tab-contents active-tab" id="skills">
               <ul>
                 <li><span>UI/UX</span><br />Designing Web/App interfaces</li>
@@ -68,7 +74,8 @@
                 </li>
               </ul>
             </div>
-            <div class="tab-contents" id="experience">
+
+            <div class="tab-contents " id="experience">
               <ul>
                 <li>
                   <span>2024-Current</span><br />UI/UX Design Training at
@@ -81,7 +88,8 @@
                 <li><span>2025-Current</span><br />Lead developer</li>
               </ul>
             </div>
-            <div class="tab-contents" id="education">
+
+            <div class="tab-contents " id="education">
               <ul>
                 <li>
                   <span>2025</span><br />UI/UX Design Training at Julie-tech
@@ -97,20 +105,20 @@
     <!-- services section -->
     <div id="services">
       <div class="container">
-        <h1 class="sub-title">My services</h1>
+        <h1 class="sub-title">My Services</h1>
         <div class="services-list">
           <div>
             <i class="fa-solid fa-code"></i>
             <h2>Custom Web Development</h2>
             <p>
-              Custom Web Development: I build bespoke web applications tailored
+              I build bespoke web applications tailored
               to your unique needs and goals. I build bespoke web applications
               tailored to your unique needs and goals.
             </p>
             <a href="#">Learn more</a>
           </div>
           <div>
-            <i class="fa-solid fa-crop-simple"></i>
+            <i class="fa-solid fa-crop"></i>
             <h2>UX/UI Design</h2>
             <p>
               I create intuitive and engaging user interfaces that drive user
@@ -119,6 +127,7 @@
             <a href="#">Learn more</a>
           </div>
           <div>
+          <i class="fa-brands fa-app-store-ios"></i>
             <h2>Front-end Frameworks</h2>
             <p>
               I leverage popular frameworks like React, Angular, and Vue.js to
@@ -131,19 +140,72 @@
         </div>
       </div>
     </div>
-    <!-- <script>
-      var tablinks = document.getElementsByClassName("tab-links");
-      var tabcontents = document.getElementsByClassName("tab-contents");
 
-      function opentab(tabname) {
-        for (tablink of tablinks) {
-          tablink.classList.remove("active-link");
-        }
-        for (tabcontent of tabcontents) {
-          tabcontent.classList.remove("active-tab");
-        }
-      }
-    </script> -->
+    <!-- portfolio -->
+     <div id="portfolio">
+      <div class="container">
+        <h1 class="subtitle">My Works</h1>
+        <div class="work-list">
+          <div class="work">
+             <img src="images/web-dev.png" alt="">
+            <div class="layer">
+             <h3> Social Media App</h3>
+             <p>The app connect you to the talented people around the world.Download it from play store</p>
+               <a><href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+          </div>
+          <div class="work">
+            <img src="images/web-design.png" alt="">
+            <div class="layer">
+             <h3>Online Shopping  App</h3>
+             <p>The app connect you to the talented people around the world.Download it from play store</p>
+             <a><href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+          </div>
+          <div class="work">
+            <img src="images/graphic.png" alt="">
+            <div class="layer">
+             <h3> Music App</h3>
+             <p>The app connect you to the talented people around the world.Download it from play store</p>
+               <a><href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+          </div>
+        </div>
+        <a href="#" class="btn">See More</a>
+      </div>
+     </div>
+     <!-- CONTACT -->
+<div id="contact">
+  <div class="container">
+    <div class="row">
+      <div class="contact-left">
+        <h1 class="sub-title">Contact Me</h1>
+        <p><i class="fa-regular fa-envelope"></i>kayodeoloyede@gmail.com</p>
+        <p><i class="fa-solid fa-phone"></i> +2347067603235</p>
+        <div class="social-icons">
+          <a href=""><i class="fa-brands fa-facebook"></i></a>
+          <a href=""><i class="fa-brands fa-github"></i></a>
+          <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+        </div>
+        <a href="images/CV.pdf" download class="btn btn2">Download CV </a>
+      </div>
+      <div class="contact-right">
+        <form>
+          <input type="text" name="Name" placeholder="Your Name" required>
+          <input type="email" name="email" placeholder="Your Email" required>
+          <textarea name="Message"  rows="6" placeholder="Your Message"></textarea>
+          <button type="submit" class="btn btn2">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="copyright">
+    <p>Copyright  Kaytech.</p>
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="style.js"></script>
   </body>
 </html>
+
