service to footer added

--- a/PORTfolio/index.html
+++ b/PORTfolio/index.html
@@ -9,40 +9,22 @@
       rel="stylesheet"
     />
     <title>personal portfolio</title>
-  </head>
-  <body>
-    <nav>
-      <a href="#" class="logo"><span>Kaytech</span></a>
+ <body>
+    <!-- <section id="hero" class="hero section dark-background">
+      <img src="images/blue2.jpg" alt="">
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <h2>Alex Smith</h2>
+        <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+  </div>
+  </section> -->
+  <div class="banner">
+    <img src="images/herone.jpg" alt="">
+    <div class="container">
+    <h1>Kay Tech</h1>
+        <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+  </div>
+</div>
 
-      <ul class="links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-      <i class="bx bx-menu-alt-right" id="menu"></i>
-
-      <a href="#contact" class="btn">Contact Me</a>
-    </nav>
-
-    <section id="home">
-      <img src="images/frame.jpg" alt="" />
-
-      <div class="info-box">
-        <h1><span>Hello, I'm Kaytech</span></h1>
-        <h3><span> A professional App developer</span> based in nigeria</h3>
-        <p>
-          it will be a great honor to work with your company as i have worked
-          with over five start up companies helping them in creating a user
-          friendly app.
-        </p>
-      </div>
-
-      <div class="btn-box">
-        <div class="btn">Hire</div>
-        <div class="btn">Contact me</div>
-      </div>
-    </section>
 
     <!-- ABOUT section -->
 
@@ -186,5 +168,7 @@
       </div>
     </footer>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   </body>
 </html>
+
