--- a/Kayportfolio/index.html
+++ b/Kayportfolio/index.html
@@ -14,17 +14,18 @@
   <body>
     <div id="header">
       <div class="container">
+        <!-- <img src="images/herone(1).jpg" alt=""> -->
         <nav>
           <a href="#" class="logo"><span>Kaytech </span> </a>
-         <ul id="nav-links">
-  <li><a href="#header">Home</a></li>
-  <li><a href="#about">About</a></li>
-  <li><a href="#services">Services</a></li>
-  <li><a href="#portfolio">Portfolio</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i></li> 
-</ul>
+           <ul id="nav-links">
+            <li><a href="#header">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i></li> 
           </ul>
+          <!-- </ul> -->
           <i class="fa-solid fa-bars" id="menu" onclick="openmenu()"></i>
         </nav>
         <div class="header-content">
@@ -34,11 +35,13 @@
               From Nigeria
             </h1>
                      <p>
-  I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Creator"></span>
-</p>
+              I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Creator"></span>
+            </p>
+           
           </div>
-          <img src="images/logo4.jpg" alt="" />
+          <!-- <img src="images/logo4.jpg" alt="" /> -->
       </div>
+      <img src="images/herone(1).jpg" alt="">
     </div>
     <div id="about">
       <div class="container">
@@ -140,7 +143,6 @@
         </div>
       </div>
     </div>
-
     <!-- portfolio -->
      <div id="portfolio">
       <div class="container">
@@ -180,12 +182,12 @@
     <div class="row">
       <div class="contact-left">
         <h1 class="sub-title">Contact Me</h1>
-        <p><i class="fa-regular fa-envelope"></i>kayodeoloyede@gmail.com</p>
+        <p><i class="fa-regular fa-envelope"></i>kayodeoloyede09911@gmail.com</p>
         <p><i class="fa-solid fa-phone"></i> +2347067603235</p>
         <div class="social-icons">
-          <a href=""><i class="fa-brands fa-facebook"></i></a>
-          <a href=""><i class="fa-brands fa-github"></i></a>
-          <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100055372098417"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://github.com/kayweb97/isi_webworkspace"><i class="fa-brands fa-github"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100055372098417"><i class="fa-brands fa-linkedin"></i></a>
         </div>
         <a href="images/CV.pdf" download class="btn btn2">Download CV </a>
       </div>
