--- a/webtest/index.html
+++ b/webtest/index.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>webtest</title>
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
+  
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css" />
+    <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    rel="stylesheet"
+  />
   </head>
   <body>
     <section class="container">
@@ -25,7 +22,8 @@
           <a href="#" class="active">Home</a>
           <a href="#about">About Me</a>
           <a href="#services">Services</a>
-          <a href="#portfolio">Portfolio</a>
+          <!-- <a href="#experience alt">Experience</a> -->
+          <a href="#projects-section">Projects</a>
           <a href="#contact-alt">Contact Me</a>
         </nav>
 
@@ -49,8 +47,9 @@
             <a href="#" class="active">Home</a>
             <a href="#about">About Me</a>
             <a href="#services">Services</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact-section">Contact Me</a>
+            <!-- <a href="#experience alt">Portfolio</a> -->
+            <a href="#projects-section">Projects</a>
+            <a href="#contact-alt">Contact Me</a>
           </div>
           <div class="sidebar-button">
             <button class="btn-orange">Hire Me</button>
@@ -61,17 +60,22 @@
       <main class="hero-section">
         <div class="hero-background">
           <div class="smoke-background"></div>
-          <div class="hero-text">
-            <p>Hi, I am</p>
-            <h2>Kayode Oloyede</h2>
-            <h1>
-              I'm a
-
-              <span
-                class="typed"
-                data-typed-items="Designer, Developer, Freelancer, Creator"
-              ></span>
-            </h1>
+            <div class="header-text"> 
+              <h1>
+                Kayode Oloyede
+              </h1>
+                       <p>
+                I'm  a <span class="typed" data-typed-items="Designer, Developer, Freelancer, Creator"></span>
+              </p>
+             
+            </div>
+            <div class="mouse">
+              <a href="#" class="mouse-icon">
+                <div class="mouse-wheel">
+                  <div class="arrow-down"></div>
+                </div>
+              </a>
+            </div>
             <div class="social-icons">
               <span><i class="fa-brands fa-github"></i></span>
               <span><i class="fa-brands fa-facebook"></i></span>
@@ -105,13 +109,14 @@
       </main>
     </section>
 
-    <!-- about section -->
+   <!-- ABOUT -->
+   
     <section id="about" class="about">
       <div class="img-about">
         <img src="images/logo4.jpg" alt="" />
       </div>
       <div class="about-content">
-        <!-- <span>let me introduce myself</span> -->
+       
         <h2>About Me</h2>
         <p>
           As a skilled front-end developer, I specialize in crafting visually
@@ -163,10 +168,10 @@
             <li><span>2014</span><br />BBA from ISM Nigeria.</li>
           </ul>
         </div>
-        <!-- </div>
-      </div> -->
       </div>
     </section>
+
+                            <!-- SERVICES SECTION -->
     <section class="services" id="services">
       <h1 class="heading">My Services</h1>
 
@@ -211,8 +216,9 @@
         </div>
       </div>
     </section>
+
     <!-- experience section -->
-    <section class="portfolio" id="portfolio">
+    <!-- <section class="experiences" id="experience alt">
       <h1 class="heading">My Experience</h1>
       <div class="box-container">
         <div class="box">
@@ -280,7 +286,8 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>  -->
+  
 
     <section class="ftco-section ftco-project" id="projects-section">
       <div class="container-fluid px-md-4">
@@ -290,10 +297,10 @@
           >
             <span class="subheading">Accomplishments</span>
             <h2 class="mb-4">Our Projects</h2>
-            <p>
+            <!-- <p>
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia
-            </p>
+            </p> -->
           </div>
         </div>
         <div class="row">
@@ -310,19 +317,19 @@
             <div class="overlay"></div>
             <div class="text text-center p-4">
               <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-              <span>Web Design</span>
+              <span>Shopping App</span>
             </div>
           </div>
           <div class="col-md-3">
-            <img src="images/work-3.jpg" alt="" />
+            <img src="images/work-3.jpg" alt=""  />
             <div class="overlay"></div>
             <div class="text text-center p-4">
               <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-              <span>Web Design</span>
+              <span>Bot App</span>
             </div>
           </div>
           <div class="col-md-3">
-            <img src="images/work-4.jpg" alt="" />
+            <img src="images/work-4.jpg" alt="" loading="lazy"/>
             <div class="overlay"></div>
             <div class="text text-center p-4">
               <h3><a href="#">Branding &amp; Illustration Design</a></h3>
@@ -365,16 +372,16 @@
       </div>
     </section>
 
-    <!-- Contact Section without Bootstrap -->
+    <!-- Contact Section  -->
     <section class="ftco-section contact-form" id="contact-alt">
       <div class="contact-container">
         <div class="contact-heading">
           <span class="subheading">Contact us</span>
           <h2 class="mb-4">Have a Project?</h2>
-          <p>
+          <!-- <p>
             Far far away, behind the word mountains, far from the countries
             Vokalia and Consonantia
-          </p>
+          </p> -->
         </div>
 
         <div class="contact-content">
@@ -474,7 +481,19 @@
         </div>
       </div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <footer> <div class="row">
+      <div class="col-md-12 text-center">
+
+        <p>
+Copyright ©2025 All rights reserved <i class="fa-solid fa-heart" aria-hidden="true"></i> by Colorlib</a>
+</p>
+      </div>
+    </div>
+  </footer>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script> -->
     <script src="app.js"></script>
+    <button id="scrollToTopBtn" title="Go to top">
+      <i class="fa-solid fa-arrow-up"></i>
+    </button>
   </body>
 </html>
